--- a/app.css
+++ b/app.css
@@ -4,5 +4,12 @@
     top: 0px;
     width: 320px;
     height: 100%;
-    background: orange;
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 8px 8px;
+}
+
+.esa-post {
+    margin-top: 12px;
 }
